# finansis

./: Cargo.toml  README.md
src/: main.rs
src/api/: finance_data.rs  mod.rs
src/routes/: get_companies.rs  mod.rs
