[package]
name = "finansis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0.117"
axum = { version = "0.7.5", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
